// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when authenticated renders 1`] = `
<DocumentFragment>
  <nav
    aria-label="main navigation"
    class="navbar is-dark"
    role="navigation"
  >
    <section
      class="container"
    >
      <div
        class="navbar-brand"
      >
        <a
          class="navbar-item nav-title"
          href="/"
          style="font-weight: bold;"
        >
          Hello, world!
        </a>
        <span
          class="nav-toggle navbar-burger"
        >
          <span />
          <span />
          <span />
        </span>
      </div>
      <div
        class="navbar-menu"
      >
        <div
          class="navbar-start"
        >
          <a
            class="navbar-item"
            data-testid="nav-about"
            href="/about"
          >
            About
          </a>
          <a
            class="navbar-item"
            data-testid="nav-sanity"
            href="/sanity"
          >
            Sanity
          </a>
        </div>
        <div
          class="navbar-end"
        >
          <div
            class="navbar-item"
          >
            test@test.com
          </div>
          <div
            class="navbar-item link"
            data-testid="nav-signout"
          >
            SignOut
          </div>
        </div>
      </div>
    </section>
  </nav>
</DocumentFragment>
`;

exports[`when not authenticated renders 1`] = `
<DocumentFragment>
  <nav
    aria-label="main navigation"
    class="navbar is-dark"
    role="navigation"
  >
    <section
      class="container"
    >
      <div
        class="navbar-brand"
      >
        <a
          class="navbar-item nav-title"
          href="/"
          style="font-weight: bold;"
        >
          Hello, world!
        </a>
        <span
          class="nav-toggle navbar-burger"
        >
          <span />
          <span />
          <span />
        </span>
      </div>
      <div
        class="navbar-menu"
      >
        <div
          class="navbar-start"
        >
          <a
            class="navbar-item"
            data-testid="nav-about"
            href="/about"
          >
            About
          </a>
        </div>
        <div
          class="navbar-end"
        >
          <span
            class="navbar-item link"
            data-testid="nav-signin"
          >
            SignIn
          </span>
        </div>
      </div>
    </section>
  </nav>
</DocumentFragment>
`;
